<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:orientation="vertical">

    <Button
        android:id="@+id/resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/reset_password"
        android:textSize="@dimen/normalText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add_category"
        android:textSize="@dimen/normalText" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add_budget"
        android:textSize="@dimen/normalText" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/logout"
        android:textSize="@dimen/normalText" />

</LinearLayout>