<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addBudgetContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddBudget">

    <TextView
        android:id="@+id/budgetCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textSize="@dimen/headerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterBudgetAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/enter_budget_amount"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:textSize="@dimen/normalText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterAmountHeader" />

    <EditText
        android:id="@+id/enterEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/enter_end_date"
        android:inputType="date"
        android:maxLength="10"
        android:textSize="@dimen/normalText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEndDateHeader" />

    <EditText
        android:id="@+id/enterStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/enter_start_date"
        android:inputType="date"
        android:maxLength="10"
        android:textSize="@dimen/normalText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEndStartHeader" />

    <Button
        android:id="@+id/submitBudget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:clickable="true"
        android:text="@string/submit"
        android:textSize="@dimen/normalText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEndDate" />

    <TextView
        android:id="@+id/enterAmountHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center|center_horizontal"
        android:text="@string/enter_amount"
        android:textSize="@dimen/normalText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budgetCategory" />

    <TextView
        android:id="@+id/enterEndStartHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center|center_horizontal"
        android:text="@string/enter_start_date"
        android:textSize="@dimen/normalText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterBudgetAmount" />

    <TextView
        android:id="@+id/enterEndDateHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center|center_horizontal"
        android:text="@string/enter_end_date"
        android:textSize="@dimen/normalText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterStartDate" />

</androidx.constraintlayout.widget.ConstraintLayout>